[package]
name = "rust-avr-test"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avrd = "0.1.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"